...
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_news_margin_top"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_normal"
                tools:text="ABC News"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgHeadLineNews"
                android:layout_marginStart="@dimen/item_news_margin_start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvDescription" />

...
